2008-06-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	(AdminWindow._createUI): Use kiwi GladeDelegate, make
	statusbar private

	* flumotion/admin/gtk/adminwindow.py:
	Rename internal variables and some internal methods to be easier
	to read. Use show instead of show_all.
	Call _updateComponents a bit more often.

	* flumotion/admin/gtk/componentview.py
	(ComponentView._componentInactiveToUnset): check if
	self._currentComponentState is None before using it to avoid
	a shutdown race.

2008-06-04  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion/extern/log/log.py:
	* flumotion/manager/base.py:
	Fixes #1013: Sent the debug marker to all components that have
	an avatar. Refactor writeDebugMarker to use a table for the
	methods instead of using a if/elif/else structure.

2008-06-03  Jordi Massaguer i Pla  <jordi@flumotion.com>

	reviewed by: Johan Dahlin  <johan@flumotion.com>

	* data/glade/debug-marker.glade:
	New interface for sending a marker to the manager to write it on the log.
	* flumotion/admin/gtk/adminwindow.py:
	Added a new action on the debug menu that opens a window for sending
	a marker to the manager to write it on the log.
	* flumotion/admin/gtk/debugmarkerview.py:
	New interface for sending a marker to the manager to write it on the log.
	* flumotion/common/medium.py:
	Added a new remote method that writes a marker to the logs.
	* flumotion/extern/log/log.py:
	Added a new method that writes a marker to the logs.
	Added also new utility functions that gets the name and the int
	of a debug level.
	* flumotion/extern/log/test_log.py:
	Tests the previous.
	* flumotion/manager/base.py:
	Added a new perspective methos to write a marker on the logs.
	Fixes #979

2008-06-03  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py
	(AdminWindow._runConfigurationWizard): Make it possible to close
	the popup question dialog by clicking on the close button.

	* flumotion/admin/gtk/adminwindow.py