@@ -1,6 +1,9 @@
 2008-06-04  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/admin/gtk/adminwindow.py:
+	clean up debug marker api and location.
+
+	* flumotion/admin/gtk/adminwindow.py:
 	(AdminWindow._createUI): Use kiwi GladeDelegate, make
 	statusbar private
 
